--- a/docker/DockerfileLocal
+++ b/docker/DockerfileLocal
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.7-stretch
+FROM python:3.10-slim
 
 # Set the working directory to /app
 WORKDIR /app
@@ -12,4 +12,4 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 # Copy the current directory contents into the container at /app
 
 # Run app.py when the container launches
-ENTRYPOINT ["python3.7"]
+ENTRYPOINT ["python3"]
